--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^3.4.1",
+    "eslint": "^8.15.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "tslint": "^6.1.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
