--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^3.4.1",
     "eslint": "^8.15.0",
+    "ng2-dnd": "^5.0.2",
+    "react": "^18.1.0",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.4.0",
     "tslint": "^6.1.3",
     "zone.js": "~0.11.4"
   },
