--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^3.4.1",
+    "cookie-parser": "^1.4.6",
     "eslint": "^8.15.0",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "ng2-dnd": "^5.0.2",
     "react": "^18.1.0",
     "rxjs": "~7.5.0",
