--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cookie-parser": "^1.4.6",
     "eslint": "^8.15.0",
     "express": "^4.18.1",
+    "mongoose": "^6.4.0",
+    "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
     "ng2-dnd": "^5.0.2",
     "react": "^18.1.0",
